<resources>
    <string name="app_name">Reverse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!---Jugar-->
    <string name="frase">Frase</string>
    <string name="frase_usuario">Introduce aquí la frase al revés</string>
    <string name="boton_empezar">Empezar</string>
    <string name="boton_volver">Volver</string>

    <!---PopUpJugar-->
    <string name="boton_reintentar">Volver a jugar</string>
    <string name="boton_salir">Salir</string>

    <!---Nueva Frase-->
    <string name="newFrase">Introduce una frase</string>
    <string name="popupTitle">Nueva frase</string>
    <string name="popupOK">OK</string>
    <string name="logIn">LogIn</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="register">Register</string>

</resources>